data/derived/comb/progs/unify/prog1186.ml.out
Characters 85-86:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'a -> 'b) -> 'a -> 'a -> 'b
       but an expression was expected of type
         ('a -> 'a -> 'b) -> 'a -> 'a -> 'a -> 'b
       The type variable 'b occurs inside 'a -> 'b
